@@ -8,9 +8,9 @@ import java.util.stream.Collectors;
 public class Demo6 {
     public static void main(String[] args) {
         List<String> names = Arrays.asList("Mark", "Watson", "Paul", "Jeffrey", "Stacy");
-        List<String> result = new ArrayList<>();
+        List<String> result;
 
-        result = names.stream().filter(name -> name.length() > 4 && name.length() < 8).collect(Collectors.toList());
+        result = names.stream().filter(name -> name.length() > 4 && name.length() < 8).toList();
         System.out.println(result);
     }
 }
